master/internalproxy/templates/blueiris.yaml
apiVersion: v1
kind: Service
metadata:
  name: blueiris
spec:
  ports:
    - name: app
      port: 81
      protocol: TCP
      targetPort: 81
  clusterIP: None
  type: ClusterIP

---

apiVersion: v1
kind: Endpoints
metadata:
  name: blueiris
subsets:
  - addresses:
      - ip: 192.168.99.2
    ports:
      - name: app
        port: 81
        protocol: TCP

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: blueiris-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`blueiris.internal.durp.info`) && PathPrefix(`/`)
      middlewares:
        - name: whitelist
          namespace: traefik
      kind: Rule
      services:
        - name: blueiris
          port: 81
          scheme: http
  tls:
    secretName: blueiris-tls
