master/internalproxy/templates/gitea.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
spec:
  ports:
    - name: app
      port: 3000
      protocol: TCP
      targetPort: 3000
  clusterIP: None
  type: ClusterIP

---

apiVersion: v1
kind: Endpoints
metadata:
  name: gitea
subsets:
  - addresses:
      - ip: 192.168.20.200
    ports:
      - name: app
        port: 3000
        protocol: TCP

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitea-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gitea.durp.info`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: gitea
          port: 3000
          scheme: http
  tls:
    secretName: gitea-tls

---

kind: Service
apiVersion: v1
metadata:
  name: gitea-external-dns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: gitea.durp.info
spec:
  type: ExternalName
  externalName: durp.info
