master/internalproxy/templates/proxmox.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxmox
spec:
  ports:
    - name: app
      port: 8006
      protocol: TCP
      targetPort: 8006
  clusterIP: None
  type: ClusterIP

---

apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox
subsets:
  - addresses:
      - ip: 192.168.21.252
    ports:
      - name: app
        port: 8006
        protocol: TCP

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: proxmox-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`proxmox.internal.durp.info`) && PathPrefix(`/`)
      middlewares:
        - name: whitelist
          namespace: traefik
      kind: Rule
      services:
        - name: proxmox
          port: 8006
          scheme: https
  tls:
    secretName: proxmox-tls
