master/internalproxy/templates/redlib.yaml
apiVersion: v1
kind: Service
metadata:
  name: redlib
spec:
  ports:
  - name: app
    port: 8082
    protocol: TCP
    targetPort: 8082
  clusterIP: None
  type: ClusterIP

---

apiVersion: v1
kind: Endpoints
metadata:
  name: redlib
subsets:
- addresses:
  - ip: 192.168.20.253
  ports:
  - name: app
    port: 8082
    protocol: TCP

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: redlib-ingress
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`redlib.durp.info`) && PathPrefix(`/`)
    middlewares:
    - name: whitelist
      namespace: traefik
    - name: authentik-proxy-provider
      namespace: traefik  
    kind: Rule
    services:
    - name: redlib
      port: 8082
  - match: Host(`redlib.durp.info`) && PathPrefix(`/outpost.goauthentik.io`)
    kind: Rule
    services:
    - name: ak-outpost-authentik-embedded-outpost
      namespace: authentik
      port: 9000
  tls:
    secretName: redlib-tls
