master/internalproxy/templates/s3.yaml
apiVersion: v1
kind: Service
metadata:
  name: s3
spec:
  ports:
    - name: app
      port: 9768
      protocol: TCP
      targetPort: 9768
  clusterIP: None
  type: ClusterIP

---

apiVersion: v1
kind: Endpoints
metadata:
  name: s3
subsets:
  - addresses:
      - ip: 192.168.20.253
    ports:
      - name: app
        port: 9768
        protocol: TCP

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: s3-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`s3.internal.durp.info`) && PathPrefix(`/`)
      middlewares:
        - name: whitelist
          namespace: traefik
      kind: Rule
      services:
        - name: s3
          port: 9768
          scheme: http
  tls:
    secretName: s3-tls
