master/internalproxy/templates/smokeping.yaml
apiVersion: v1
kind: Service
metadata:
  name: smokeping
spec:
  ports:
  - name: app
    port: 81
    protocol: TCP
    targetPort: 81
  clusterIP: None
  type: ClusterIP

---

apiVersion: v1
kind: Endpoints
metadata:
  name: smokeping
subsets:
- addresses:
  - ip: 192.168.20.253
  ports:
  - name: app
    port: 81
    protocol: TCP

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: smokeping-ingress
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`smokeping.durp.info`) && PathPrefix(`/`)
    middlewares:
    - name: whitelist
      namespace: traefik
    - name: authentik-proxy-provider
      namespace: traefik  
    kind: Rule
    services:
    - name: smokeping
      port: 81
  - match: Host(`smokeping.durp.info`) && PathPrefix(`/outpost.goauthentik.io`)
    kind: Rule
    services:
    - name: ak-outpost-authentik-embedded-outpost
      namespace: authentik
      port: 9000
  tls:
    secretName: smokeping-tls

---

kind: Service
apiVersion: v1
metadata:
  name: smokeping-external-dns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: smokeping.durp.info
spec:
  type: ExternalName
  externalName: durp.info
