master/internalproxy/templates/tdarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdarr
spec:
  ports:
  - name: app
    port: 8267
    protocol: TCP
    targetPort: 8267
  clusterIP: None
  type: ClusterIP

---

apiVersion: v1
kind: Endpoints
metadata:
  name: tdarr
subsets:
- addresses:
  - ip: 192.168.20.253
  ports:
  - name: app
    port: 8267
    protocol: TCP

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tdarr-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`tdarr.internal.durp.info`)
    middlewares:
    - name: whitelist
      namespace: traefik  
    - name: authentik-proxy-provider
      namespace: traefik  
    kind: Rule
    services:
    - name: tdarr
      port: 8267
      scheme: http
  tls:
    secretName: tdarr-tls
