master/internalproxy/templates/unraid.yaml
apiVersion: v1
kind: Service
metadata:
  name: unraid
spec:
  ports:
    - name: app
      port: 443
      protocol: TCP
      targetPort: 443
  clusterIP: None
  type: ClusterIP

---

apiVersion: v1
kind: Endpoints
metadata:
  name: unraid
subsets:
  - addresses:
      - ip: 192.168.20.200
    ports:
      - name: app
        port: 443
        protocol: TCP

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: unraid-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`unraid.internal.durp.info`) && PathPrefix(`/`)
      middlewares:
        - name: whitelist
          namespace: traefik
      kind: Rule
      services:
        - name: unraid
          port: 443
          scheme: https
  tls:
    secretName: unraid-tls
